--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html,body{
 	width:100%;
   height: 100%;
   font-family: "NotoSansCJKjp";
 }
 
-/*.top{
+.top{
   top: 0;
   width: 100%;
   height: 100%;
   background: #0000ff;
   z-index: 1000;
 }
-*/
+
+.logo{
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  margin: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+}
 
 a:hover{
   color: #0000ff;
