--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ html,body{
   font-family: "NotoSansCJKjp";
 }
 
-.top{
+.top-slide-container{
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
@@ -17,15 +18,22 @@ html,body{
   z-index: 1000;
 }
 
-.logo{
+.top-slide-inner{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.top-slide-logo{
+  position: absolute;
+  display: block;
   width: 300px;
   height: 300px;
-  position: absolute;
-  margin: 0;
+  margin: auto;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
   opacity: 0;
 }
 
@@ -55,7 +63,7 @@ a:hover{
 
 .navbar-logo img{
   max-width: 70px;
-  height: auto; 
+  height: auto;
 }
 
 
