--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html,body{
   top: 0;
   width: 100%;
   height: 100%;
-  background: #0000ff;
+  background: #0B318F;
   z-index: 1000;
 }
 
@@ -38,7 +38,7 @@ html,body{
 }
 
 a:hover{
-  color: #0000ff;
+  color: #0B318F;
 }
 
 .wrapper {
