--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,6 @@ a{
   text-decoration: none;
 }
 
-a:hover{
-  color: #0B318F;
-}
-
-a:visited{
-  color: #0B318F;
-}
-
 .wrapper {
   position: relative;
   width:100%;
@@ -60,8 +52,7 @@ a:visited{
   position: fixed;
   top: 0;
   right: 0;
-/*  width: 10%;
-*/  z-index: -1000;
+  z-index: 1000;
 }
 
 .navbar-logo{
@@ -74,7 +65,6 @@ a:visited{
   max-width: 70px;
   height: auto;
 }
-
 
 .navbar-menu{
   list-style: none;
@@ -89,6 +79,14 @@ a:visited{
   font-size: 80%;
   font-weight: bold;
   margin-right: 10px;
+}
+
+.navbar-menu li a {
+  color: #000;
+}
+
+.navbar-menu li a:hover {
+  color: #0B318F;
 }
 
 .container {
