--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@ html,body{
   font-family: "NotoSansCJKjp";
 }
 
+.grid-item img{
+  max-width: 100%;
+  outline: none;
+  border: none;
+  display: block;
+  border-radius: 5px;
+}
+
 .top-slide-container{
   position: fixed;
   top: 0;
@@ -107,23 +115,19 @@ a{
 /* ---- grid-item ---- */
 
 .grid-item {
-  width: 160px;
-  height: 120px;
-  margin: 3px;
+  width: 200px;
+  height: 200px;
+  margin: 10px;
   float: left;
-  background: #000000;
-  border: 2px solid #333;
+/*  background-image: url(../image/kaisei.png)
+  background-size: cover;
+*/  border: 1px solid #333;
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius: 5px;
 }
 
-.grid-item--width2 { width: 160px; }
-.grid-item--width3 { width: 160px; }
-.grid-item--width4 { width: 160px; }
-
-.grid-item--height2 { height: 200px; }
-.grid-item--height3 { height: 260px; }
-.grid-item--height4 { height: 360px; }
+.grid-item--height2 { height: 300px; }
+.grid-item--height3 { height: 250px; }
 
 
 
