--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ a{
   list-style: none;
   writing-mode: vertical-rl;
   margin-left: auto;
-  margin-right: 13px;
+  margin-right: 17px;
   margin-top: 10px;
   padding-top: 0;
 }
@@ -122,12 +122,12 @@ a{
   background-size: cover;
 */  border: 1px solid #333;
   border-color: hsla(0, 0%, 0%, 0.5);
-  border-radius: 5px;
+  border-radius: 6px;
 }
 
-.grid-item--height2 { height: 300px; }
+/*.grid-item--height2 { height: 300px; }
 .grid-item--height3 { height: 250px; }
-
+*/
 
 
 
