--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html,body{
 	width:100%;
   height: 100%;
   font-family: "NotoSansCJKjp";
+  -webkit-text-size-adjust: 100%
 }
 
 .grid-item img{
@@ -118,16 +119,16 @@ a{
   width: 200px;
   margin: 10px;
   float: left;
-/*  background-image: url(../image/kaisei.png)
-  background-size: cover;
-*/  border: 1px solid #333;
+  border: 1px solid #333;
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius: 6px;
 }
 
-/*.grid-item--height2 { height: 300px; }
-.grid-item--height3 { height: 250px; }
-*/
+@media screen and (min-width:768px){
+  
+}
+
+
 
 
 
