--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@ html,body{
 	width:100%;
   height: 100%;
   font-family: "NotoSansCJKjp";
+  -webkit-text-size-adjust: 100%
+}
+
+.grid-item img{
+  max-width: 100%;
+  outline: none;
+  border: none;
+  display: block;
+  border-radius: 5px;
 }
 
 .top-slide-container{
@@ -70,7 +79,7 @@ a{
   list-style: none;
   writing-mode: vertical-rl;
   margin-left: auto;
-  margin-right: 13px;
+  margin-right: 17px;
   margin-top: 10px;
   padding-top: 0;
 }
@@ -107,23 +116,18 @@ a{
 /* ---- grid-item ---- */
 
 .grid-item {
-  width: 160px;
-  height: 120px;
-  margin: 3px;
+  width: 200px;
+  margin: 10px;
   float: left;
-  background: #000000;
-  border: 2px solid #333;
+  border: 1px solid #333;
   border-color: hsla(0, 0%, 0%, 0.5);
-  border-radius: 5px;
+  border-radius: 6px;
 }
 
-.grid-item--width2 { width: 160px; }
-.grid-item--width3 { width: 160px; }
-.grid-item--width4 { width: 160px; }
+@media screen and (min-width:768px){
+  
+}
 
-.grid-item--height2 { height: 200px; }
-.grid-item--height3 { height: 260px; }
-.grid-item--height4 { height: 360px; }
 
 
 
