--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,10 @@
 html,body{
 	width:100%;
   height: 100%;
-  font-family: "NotoSansCJKjp";
-  -webkit-text-size-adjust: 100%
-}
-
-.grid-item img{
-  max-width: 100%;
-  outline: none;
-  border: none;
-  display: block;
-  border-radius: 5px;
+  font-family: "Avenir";
+  font-weight: bold;
+  color: #0446BA;
+  -webkit-text-size-adjust: 100%;
 }
 
 .top-slide-container{
@@ -46,9 +40,6 @@ html,body{
   opacity: 0;
 }
 
-a{
-  text-decoration: none;
-}
 
 .wrapper {
   position: relative;
@@ -56,7 +47,30 @@ a{
   height: 100%;
 }
 
-.navbar {
+.top-logo{
+  margin-left: 25px;
+  margin-top: 50px;
+}
+
+.top-logo img{
+  width: 150px;
+}
+
+.address{
+  font-size: 10pt;
+  writing-mode: vertical-rl;
+  position: fixed;
+  margin-top: 135px;
+}
+
+.sns{
+  font-size: 10pt;
+  writing-mode: vertical-rl;
+  position: fixed;
+  margin-top: 575px;
+}
+
+/*.navbar {
   opacity: 0;
   position: fixed;
   top: 0;
@@ -96,13 +110,13 @@ a{
 
 .navbar-menu li a:hover {
   color: #0B318F;
-}
+}*/
 
 .container {
   opacity: 0;
-  width: calc(100% - 120px);
+  width: 90%;
   height: 100%;
-  margin-top: 103px;
+  margin-top: 40px;
   margin-left: 15px;
 }
 
@@ -119,9 +133,17 @@ a{
   width: 200px;
   margin: 10px;
   float: left;
-  border: 1px solid #333;
+  border: 1px solid #e2e2e2;
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius: 6px;
+}
+
+.grid-item img{
+  max-width: 100%;
+  outline: none;
+  border: none;
+  display: block;
+  border-radius: 5px;
 }
 
 
@@ -135,7 +157,6 @@ a{
     height: 200px;
   }
 
-  
 
 
 
