--- a/css/style.css
+++ b/css/style.css
@@ -49,25 +49,28 @@ html,body{
 
 .top-logo{
   margin-left: 25px;
-  margin-top: 50px;
+  margin-top: 70px;
 }
 
 .top-logo img{
-  width: 150px;
+  width: 200px;
 }
 
+
 .address{
-  font-size: 10pt;
+  font-size: 12pt;
   writing-mode: vertical-rl;
   position: fixed;
-  margin-top: 135px;
+  margin-top: 165px;
+  margin-right: -60px;
 }
 
 .sns{
-  font-size: 10pt;
+  font-size: 12pt;
   writing-mode: vertical-rl;
   position: fixed;
-  margin-top: 575px;
+  margin-top: 605px;
+  margin-right: -60px;
 }
 
 /*.navbar {
@@ -116,8 +119,13 @@ html,body{
   opacity: 0;
   width: 90%;
   height: 100%;
-  margin-top: 40px;
+  margin-top: 50px;
   margin-left: 15px;
+}
+
+.grid{
+  width: 100%;
+  margin: 0;
 }
 
 /* clearfix */
@@ -148,16 +156,37 @@ html,body{
 
 
 @media screen and (max-width:480px) {
-  .grid-item{
-    width: 40%;
-  }
 
   .top-slide-logo{
     width: 200px;
     height: 200px;
   }
 
+  .container{
+    margin-top: 40px;
+  }
 
+  .grid-item{
+    width: 30%;
+  }
+
+  .address{
+    font-size: 10pt;
+    width: 10%;
+    margin-top: 70px;
+    margin-right: -70px;
+  }
+
+.sns{
+  font-size: 10pt;
+  margin-top: 395px;
+  margin-right: -70px;
+  width: 10%;
+}
+
+.top-logo img{
+  width: 150px;
+}
 
 
 }
