--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 html,body{
 	width:100%;
   height: 100%;
-  color: #0446BA;
+  color: #233285;
   -webkit-text-size-adjust: 100%;
   font-family: 'Roboto Condensed', sans-serif;
 }
